# Networking

./: CMakeLists.txt  CMakeSettings.json  README.md
Networking/: CMakeLists.txt  Client.cpp  Client.h  Networking.cpp  Networking.h  Server.cpp  Server.h
Networking/Logging/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  Logger.cpp  Logger.h
Networking/Network/: Buffer.cpp  Buffer.h  ByteFormatter.cpp  ByteFormatter.h  ByteParser.cpp  ByteParser.h  ClientConnection.cpp  ClientConnection.h  Endpoint.cpp  Endpoint.h  ISocket.h  Message.cpp  Message.h  ServerConnection.cpp  ServerConnection.h  Socket.cpp  Socket.h  SocketConnection.h
Networking/Network/Endian/: EndianAgnostic.h
Networking/Network/Linux/: LinuxSocket.cpp  LinuxSocket.h
Networking/Network/Messages/: ConnectMessage.cpp  ConnectMessage.h  ConnectionData.h  DisconnectMessage.cpp  DisconnectMessage.h  HeartbeatMessage.cpp  HeartbeatMessage.h  Message.h  MessageFactory.h  MessageHeader.cpp  MessageHeader.h  MetaMessage.cpp  MetaMessage.h  StringMessage.cpp  StringMessage.h  WrappedMessage.cpp  WrappedMessage.h
Networking/Network/Windows/: WindowsSocket.cpp  WindowsSocket.h
Networking/Serialization/: Serialization.h
